# SimpleAnalyzeText

./: CMakeLists.txt  README.md  main.cpp  textanalysis.cpp
include/: textanalysis.h
src/: main.cpp  textanalysis.cpp
